Fix cors issues and default mail sender name